whatsApp and mail

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h1>ברוכים הבאים לשורשים הנדסה וניהול בע"מ</h1>
         <p>ניהול ופיקוח פרויקטים ברמה הגבוהה ביותר.</p>
         <div class="contact-buttons">
-            <a href="https://wa.me/YOUR_NUMBER" class="whatsapp">צור קשר בוואטסאפ</a>
-            <a href="mailto:YOUR_EMAIL" class="email">שלח לנו מייל</a>
+            <a href="https://wa.me/+972547623933" class="whatsapp">צור קשר בוואטסאפ</a>
+            <a href="mailto:office@rbsb.co.il" class="email">שלח לנו מייל</a>
         </div>
     </div>
 </body>
